update project after rename

--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -25,7 +25,7 @@
               <div class="item-details">
                 <img [src]="item.product.imageUrl" [alt]="item.product.name" />
                 <div>
-                  <p class="brand-copy">Sammy2k</p>
+                  <p class="brand-copy">Obasam</p>
                   <h2>{{ item.product.name }}</h2>
                   <p class="category-copy">{{ item.product.category }}</p>
                 </div>
