--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -1,7 +1,7 @@
 <section class="products">
   <header class="products-header">
     <div class="header-container">
-      <h1>Sammy2k Clothing Products</h1>
+      <h1>Obasam Clothing Products</h1>
       <p>
         Browse mens watches, sunglasses, suits, ties, jeans, jerseys, T‑shirts,
         and round‑neck tops, then add your favourites to the cart.
