--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-/* Global design system – Sammy2k Clothing (Swiper CSS loaded via angular.json) */
+/* Global design system – Obasam Clothing (Swiper CSS loaded via angular.json) */
 
 :root {
   --font-sans: "Roboto", "Helvetica Neue", sans-serif;
