--- a/src/app/features/contact/contact.component.html
+++ b/src/app/features/contact/contact.component.html
@@ -2,7 +2,7 @@
   <header>
     <h1>Contact Us</h1>
     <p>
-      Reach out to Sammy2k Clothing and our team will respond as quickly as
+      Reach out to Obasam Clothing and our team will respond as quickly as
       possible.
     </p>
   </header>
@@ -29,7 +29,7 @@
           <div>
             <h3>Email</h3>
             <p>
-              hello&#64;sammy2kclothing.com<br />support&#64;sammy2kclothing.com
+              hello&#64;obasamclothing.com<br />support&#64;obasamclothing.com
             </p>
           </div>
         </div>
@@ -48,11 +48,11 @@
         <ul>
           <li>
             <mat-icon>thumb_up</mat-icon> Facebook:
-            <strong>facebook.com/sammy2kclothing</strong>
+            <strong>facebook.com/obasamclothing</strong>
           </li>
           <li>
             <mat-icon>photo_camera</mat-icon> Instagram:
-            <strong>&#64;sammy2kclothing</strong>
+            <strong>&#64;obasamclothing</strong>
           </li>
           <li>
             <mat-icon>chat</mat-icon> WhatsApp:
